src/objects/vlocity_ins__DocumentSection__c.object
<CustomObject>
    <description>Contains details about each section of a generated object document.</description>
    <fields>
        <fullName>vlocity_ins__ContainsRedlines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the contract section contains at least one redline</description>
        <label>Contains Redlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayHeaderData__c</fullName>
        <description>Contract section display header</description>
        <label>Display Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayHeaderInline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the section following the contract section header will be displayed inline in the document.</description>
        <label>Display Header Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplaySectionName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the section name is displayed on the generated document</description>
        <label>Display Section Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the clause that this contract section resulted from</description>
        <label>Document Clause</label>
        <referenceTo>vlocity_ins__DocumentClause__c</referenceTo>
        <relationshipLabel>Document Sections</relationshipLabel>
        <relationshipName>DocumentSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentId__c</fullName>
        <description>Object Document that this section belongs to</description>
        <label>Document</label>
        <referenceTo>vlocity_ins__Document__c</referenceTo>
        <relationshipLabel>Document Sections</relationshipLabel>
        <relationshipName>DocumentSections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentTemplateSectionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the template section that this contract section resulted from</description>
        <label>Document Template Section</label>
        <referenceTo>vlocity_ins__DocumentTemplateSection__c</referenceTo>
        <relationshipLabel>Document Sections</relationshipLabel>
        <relationshipName>DocumentSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsEnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsInNewPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the section is started on a new page</description>
        <label>New Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that the section content is restricted for editing</description>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSectionNonStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that section is a non-standard section that deviates from the associated template</description>
        <label>Non Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsStart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsWordTableHeaderRepeated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Table Header in Word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemSectionFontStyle__c</fullName>
        <description>Default font style used for section</description>
        <label>Item Section Font Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Level__c</fullName>
        <description>The level of this section in the section hierarchy</description>
        <label>Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NeedAutoSectionNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that the section number for this section will be automatically generated</description>
        <label>Auto Section Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReconciledSectionContent__c</fullName>
        <description>The section content creates as a result of its equivalent reconciled section from the Word document</description>
        <label>Reconciled Section Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResetAutoNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that the section number for this section will be reset</description>
        <label>Reset Auto Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SectionContent__c</fullName>
        <description>The section content stored as a HTML fragment</description>
        <label>Section Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SectionCreationSource__c</fullName>
        <description>How was this section created - whether it was generated, reconciled from a Word document or customized by a user</description>
        <label>Section Creation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customize</fullName>
                </value>
                <value>
                    <fullName>Generate</fullName>
                    <default>true</default>
                    <label>Generate</label>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>The section&apos;s sequence number in the contract document</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SignatureTokens__c</fullName>
        <description>DocuSign signature tokens</description>
        <label>Signature Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubSequence__c</fullName>
        <label>Sub Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TemplateSectionData__c</fullName>
        <description>The original section content that was brought over from the corresponding template section</description>
        <label>Template Section Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Tokens__c</fullName>
        <description>Tokens in the section that map to Salesforce object fields</description>
        <label>Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Type of the section</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Context</fullName>
                </value>
                <value>
                    <fullName>Clause</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__WMLData__c</fullName>
        <label>WML Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document Section</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>